# cvetracker4rs

./: .dockerignore  .env.template  .gitignore  .gitmodules  Cargo.toml  DOCKER_USAGE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  run-docker.sh  rust-toolchain.toml
.github/workflows/: ci.yml
csv/: merged.csv  origin.csv
scripts/: init-cratesio.sh
src/: academic_report.rs  callgraph.rs  database.rs  dependency_analyzer.rs  dependency_graph.rs  dir.rs  enhanced_stats.rs  lib.rs  logger.rs  main.rs  model.rs  process.rs  stats.rs  utils.rs
