[package]
name = "cross_pro_cg"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["std", "local-time", "env-filter"] }
tracing-appender = "0.2"
tracing-log = "^0"
env_logger = "0.10"
semver = "1.0"
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", default-features = true }
futures-util = "0.3"
anyhow = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "time"] }
once_cell = "1.18"
dotenv = "0.15"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3.0"
